--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
         "type": "git",
         "url": "https://github.com/RealAwesomeness/team-website"
     },
+    "main": "bindings.js",
+    "scripts": {
+        "build": "node-gyp build",
+        "install": "node-gyp rebuild",
+        "start": "node ./main.js"
+      },
     "dependencies": {
-        "http" : "*",
-        "fs" : "*",
-        "redis" : "*"
+        "redis" : "*",
+        "nan": "^2.7.0"
     }
 }
